# grpc-rust

./: .gitignore  Cargo.toml  build.rs
protos/: calculator.proto  client.proto
src/: build.rs  client.rs  main.rs
